--- a/Barbelllifts.html
+++ b/Barbelllifts.html
@@ -68,17 +68,11 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 <h1>Setup environment and Load data</h1>
 <p>For this assignment the Caret package is used. The Caret package also loads ggplot2 and lattice which helps with the graphical Analysis of data.</p>
 <p>Machine Learning can be quite time consuming therefore also doParallel package is used to speed up learning phase.</p>
-<pre><code>## Warning: package 'doParallel' was built under R version 3.1.3</code></pre>
-<pre><code>## Loading required package: foreach</code></pre>
-<pre><code>## Warning: package 'foreach' was built under R version 3.1.3</code></pre>
-<pre><code>## Loading required package: iterators</code></pre>
-<pre><code>## Warning: package 'iterators' was built under R version 3.1.3</code></pre>
-<pre><code>## Loading required package: parallel</code></pre>
-<pre><code>## Warning: package 'caret' was built under R version 3.1.3</code></pre>
-<pre><code>## Loading required package: lattice</code></pre>
-<pre><code>## Warning: package 'lattice' was built under R version 3.1.1</code></pre>
-<pre><code>## Loading required package: ggplot2</code></pre>
-<pre><code>## Warning: package 'ggplot2' was built under R version 3.1.1</code></pre>
+<pre><code>## Loading required package: foreach
+## Loading required package: iterators
+## Loading required package: parallel
+## Loading required package: lattice
+## Loading required package: ggplot2</code></pre>
 </div>
 <div id="data-preparation" class="section level1">
 <h1>Data Preparation</h1>
@@ -109,9 +103,9 @@ clean &lt;- clean[,-corFind]</code></pre>
 <div id="train-the-model" class="section level1">
 <h1>Train the model</h1>
 <p>Random tree is not biased. To speed up model fitting Parallel execution is used</p>
-<pre class="r"><code>  registerDoParallel(3,cores=3)
+<pre class="r"><code>  registerDoParallel(4,cores=4)
   getDoParWorkers()</code></pre>
-<pre><code>## [1] 3</code></pre>
+<pre><code>## [1] 4</code></pre>
 <pre class="r"><code>  modelFit &lt;- train(classe ~.,data=training,method=&quot;rf&quot;,prox=TRUE)</code></pre>
 <pre><code>## Loading required package: randomForest</code></pre>
 <pre><code>## Warning: package 'randomForest' was built under R version 3.1.3</code></pre>
